# hero-lineup

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  MIGRATION_IMPLEMENTATION_PROMPT.txt  Makefile  README.md  package.json
.github/workflows/: windows-build.yml
apps/desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: README.md  helpers.ts  native-contract.spec.ts  screenshots.spec.ts  tsconfig.json  viewports.spec.ts  workflows.spec.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: content_manager.rs  lib.rs  main.rs
apps/desktop/src/data/: catalog.ts  championConfig.ts  equipmentNeeds.ts  equipmentPreview.ts  heroCreationTemplates.ts  heroSorting.ts  heroTemplates.generated.json
apps/desktop/src/platform/: bridge.ts
apps/desktop/src/state/: useWorkspace.ts
apps/desktop/src/types/: domain.ts
apps/desktop/tests/: App.test.tsx  bridge.test.ts  catalog.test.ts  championConfig.test.ts  equipmentNeeds.test.ts  heroCreationTemplates.test.ts  heroSorting.test.ts  localTransfer.test.ts  setup.ts
content/: manifest.json
content/TextAsset/: chestodds.json  classes.json  heroes.json  items_type_dict.json  levels.json  qmodifiers.json  quests.json  skillTreeNodes.json  skills.json  texts_zh.json
content/defaults/: default-system.json
content/schemas/: content-manifest.schema.json  zysbackup.schema.json  zyslineup.schema.json
crates/: README.md
crates/hero-catalog/: Cargo.toml
crates/hero-catalog/src/: lib.rs
crates/hero-catalog/tests/: golden.rs
crates/hero-catalog/tests/fixtures/: sheets.json
crates/hero-data/: Cargo.toml
crates/hero-data/src/: lib.rs  main.rs
crates/hero-domain/: Cargo.toml
crates/hero-domain/src/: lib.rs
crates/hero-simulator/: Cargo.toml
crates/hero-simulator/examples/: print_advanced_golden.rs
crates/hero-simulator/src/: lib.rs
crates/hero-storage/: Cargo.toml
crates/hero-storage/src/: lib.rs
docs/: ACCEPTANCE_MATRIX.md  ARCHITECTURE.md  CATALOG_CALCULATION.md  DATA_MAINTENANCE.md  DATA_MODEL.md  DATA_SOURCE_PROVENANCE.md  KNOWN_DIFFERENCES.md  MACOS_BUILD.md  OFFLINE_VERIFICATION.md  ONLINE_OFFLINE_PARITY.md  RELEASE_EVIDENCE.md  SIMULATOR_RULES.md  TRANSFER_STATE_MATRIX.md  UI_COMPARISON.md  WEB_FIDELITY_AUDIT.md  WINDOWS_BUILD.md
reference/: SHA256SUMS
reference/api-samples/: hero-templates-class.headers.txt  hero-templates-class.json  hero-templates-missing-class.headers.txt  hero-templates-missing-class.json  hot-page-1.decrypted.json  hot-page-1.encrypted.json  hot-page-1.headers.txt  public-preview.headers.txt  public-preview.json  systems-unauthorized.headers.txt  systems-unauthorized.json
reference/behavior-notes/: ONLINE_RULE_EVIDENCE.md  RESOURCE_INVENTORY.md  sprite-candidates.txt  sprite-downloads.tsv  sprite-missing.tsv
reference/online-snapshots/2026-07-22/: hero-lineup.html
scripts/: refresh-reference-hashes.mjs  snapshot-hero-templates.mjs  verify-content.mjs  verify-offline.mjs
tests/fixtures/: legacy-typescript-lineup-v0.json
tests/golden/: advanced-combat-rules.json  public-preview-jurassic04.json
(+61 files in other folders)
