[package]
name = "hero-catalog"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hero-domain = { path = "../hero-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true

