[package]
name = "hero-simulator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hero-domain = { path = "../hero-domain" }
rand.workspace = true
rand_chacha = "0.3"
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
